# news-analyzer

./: README.md  pyproject.toml  ruff.toml
docs/: prd.md
src/news_helper/articles/: apnews.py
src/news_helper/entity/: __init__.py  utils.py
src/news_helper/summarizer/: __init__.py  utils.py
streamlit/: main.py
